--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     
+    <div class="wrapper">
+        <header>
+          <h2>LET'S PLAY PIANO</h2>
+          <div class="column volume-slider">
+            <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
+          </div>
+          <div class="column keys-checkbox">
+            <span>Show Keys</span><input type="checkbox" checked>
+          </div>
+        </header>
+
+    </div>
 </body>
 </html>
