Linked the Js to the html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <li class="key black" data-key="p"><span>p</span></li>
             <li class="key white" data-key=";"><span>;</span></li>
           </ul>
-
     </div>
+
+<script src="script.js"></script>
 </body>
 </html>
