Changed the name on the piano

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="wrapper">
         <header>
-          <h2>LET'S PLAY PIANO</h2>
+          <h2>Symphony of the Soul</h2>
           <div class="column volume-slider">
             <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
           </div>
